--- a/src/app/components/products-table/products-table.component.css
+++ b/src/app/components/products-table/products-table.component.css
@@ -9,4 +9,6 @@
 
 .description-sizing {
     max-width: 550px;
+    max-height: 5rem;
+    overflow: auto;
 }
